# braille-rs

./: Cargo.toml  README.md
src/: braille_char.rs  canvas.rs  error.rs  lib.rs
