[package]
name = "braille-rs"
version = "1.0.0"
edition = "2021"
description = "Simple crate for working with braille characters and drawing with them."
readme = "README.md"
homepage = "https://github.com/mzntori/braille-rs"
repository = "https://github.com/mzntori/braille-rs"
license = "MIT"
keywords = ["braille"]

[dependencies]
thiserror = "1.0.58"